# rust-programming-series

./: README.md  theads.md  vector-data-structures.md
axum-api/: Cargo.toml
axum-api/migrations/: 20250605112939_create_todos.sql
axum-api/src/: db.rs  handlers.rs  main.rs  models.rs
cat/src/: main.rs
echocli/: Cargo.toml
echocli/src/: main.rs
interact-smart-contract/: Cargo.toml
interact-smart-contract/abi/: SimpleStorage.json
interact-smart-contract/src/: main.rs
