[package]
name = "axum-api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = {version = "0.8.4", features = ["macros"]}  
tokio = { version = "1.45.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono"] }
dotenv = "0.15"
trace = "0.1.7"
tracing-subscriber = "0.3.19"
reqwest = { version = "0.12.19", features = ["json", "blocking"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
chrono = {version = "0.4.41", features = ["serde"]}
