[package]
name = "interact-smart-contract"
version = "0.1.0"
edition = "2024"

[dependencies]
web3 = { version = "0.19.0", features = ["http"] }
tokio = { version = "1.45.1", features = ["full"] }
hex = "0.4.3"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
dotenv = "0.15.0"
ethers = "2.0.14"
ethers-contract = "2.0.14"
ethers-core = "2.0.14"